# brin-geocatalog

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
db/init/: 001_schema.sql
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  main.tsx  styles.css  types.ts
services/stac-api/: Dockerfile  run.py
src/geocatalog/: access.py  api.py  cli.py  config.py  db.py  repository.py  scanner.py  stac_sync.py
tests/: test_access.py  test_api_serialization.py  test_scanner_inference.py  test_stac.py
