[project]
name = "geocatalog"
version = "0.1.0"
description = "Satellite and geospatial data catalog with STAC and Open Data Cube compatible access."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "asyncpg>=0.30.0",
  "fastapi>=0.124.0",
  "pydantic>=2.12.0",
  "pydantic-settings>=2.12.0",
  "python-multipart>=0.0.20",
  "PyYAML>=6.0.2",
  "typer>=0.20.0",
  "uvicorn[standard]>=0.38.0",
]

[project.optional-dependencies]
geo = [
  "pystac>=1.14.0",
  "rasterio>=1.4.0",
  "shapely>=2.1.0",
]
dev = [
  "ruff>=0.14.0",
]

[project.scripts]
geocatalog = "geocatalog.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/geocatalog"]

[tool.ruff]
line-length = 100
target-version = "py314"

